# batches
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

## Source directory

MAINTAINERCLEANFILES = Makefile.in

# Binaries (batches)
bin_PROGRAMS =

#avlcal_SOURCES = $(batches_h_sources) $(batches_cc_sources)
#avlcal_CXXFLAGS = $(BOOST_CFLAGS)
#avlcal_LDADD =
#avlcal_LDFLAGS = $(BOOST_PROGRAM_OPTIONS_LIB) $(top_builddir)/avlcal/core/libavlcal.la
